--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Numbers | Gerador de Números</title>
+
+  <link rel="stylesheet" href="assets/styles/global.css">
 </head>
 <body>
-  
+  <script src="assets/main.js"></script>
 </body>
 </html>
