Adding main title and explain section to HTML

--- a/index.html
+++ b/index.html
@@ -8,6 +8,37 @@
   <link rel="stylesheet" href="assets/styles/global.css">
 </head>
 <body>
+
+  <div id="container">
+    
+    <header>
+      <img src="assets/img/logo.svg" alt="Logo da Numbers">
+    </header>
+
+    <section id="main-title">
+
+      <h1>Sorteador de Números</h1>
+
+      <h2>Online - Gratuito</h2>
+
+    </section>
+
+    <ul id="explain-section"> 
+      <li>
+        <img src="assets/img/question.svg" alt="Ícone de questionamento">
+        <h3>Como funciona o sorteador de números?</h3>
+        <p>O sorteador utiliza um algoritmo de geração aleatória para criar números dentro do intervalo especificado pelo usuário.</p>
+      </li>
+
+      <li>
+        <img src="assets/img/question.svg" alt="Ícone de questionamento">
+        <h3>Posso escolher o intervalo dos números?</h3>
+        <p>Sim, você pode definir os valores mínimo e máximo para o intervalo dos números sorteados.</p>
+      </li>
+    </ul>
+    
+  </div>
+
   <script src="assets/main.js"></script>
 </body>
 </html>
