Ajusting layout settings for container

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
     </form>
 
-    <aside id="results-section" class="aside-container">
+    <aside class="aside-container" hidden>
 
       <header class="other-header">
         <h2>Resultado do Sorteio</h2>
