Ajusting layout settings for left section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Numbers | Gerador de Números</title>
 
-  <link rel="stylesheet" href="assets/styles/global.css">
+  <link rel="stylesheet" href="assets/index.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght,XOPQ,XTRA,YOPQ,YTDE,YTFI,YTLC,YTUC@8..144,100..1000,96,468,79,-203,738,514,712&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Sora:wght@100..800&display=swap" rel="stylesheet">
 
 </head>
@@ -30,14 +30,18 @@
     <ul id="explain-section"> 
       <li>
         <img src="assets/img/question.svg" alt="">
-        <h3>Como funciona o sorteador de números?</h3>
-        <p>O sorteador utiliza um algoritmo de geração aleatória para criar números dentro do intervalo especificado pelo usuário.</p>
+        <span>
+          <h3>Como funciona o sorteador de números?</h3>
+          <p>O sorteador utiliza um algoritmo de geração aleatória para criar números dentro do intervalo especificado pelo usuário.</p>
+        </span>
       </li>
 
       <li>
         <img src="assets/img/question.svg" alt="">
-        <h3>Posso escolher o intervalo dos números?</h3>
-        <p>Sim, você pode definir os valores mínimo e máximo para o intervalo dos números sorteados.</p>
+        <span>
+          <h3>Posso escolher o intervalo dos números?</h3>
+          <p>Sim, você pode definir os valores mínimo e máximo para o intervalo dos números sorteados.</p>
+        </span>
       </li>
     </ul>
 
