Ajusting no repeat button

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
         </ul>
 
         <div id="toggle-wrapper">
-          <span>
+          <label class="toggle">
             <img src="assets/img/ellipse.svg" alt="">
             <input type="checkbox" id="toggle-switch">
-          </span>
-          <label for="toggle-switch">Não repetir número</label>
+          </label>
+          <label class="toggle-legend" for="toggle-switch">Não repetir número</label>
         </div>
 
       </section>
