Creating and ajusting aside container

--- a/index.html
+++ b/index.html
@@ -84,6 +84,22 @@
       </button>
 
     </form>
+
+    <aside id="aside-container" class="result-hidden">
+      
+      <header class="aside-header">
+        <h2>Resultado do Sorteio</h2>
+        <p>Números gerados com sucesso!</p>
+      </header>
+
+      <ul id="results-list">
+      </ul>
+
+      <button type="button" id="btn-again" class="main-button">
+        Sortear Novamente <img src="assets/img/repeat.svg" alt="">
+      </button>
+
+    </aside>
     
   </div>
 
