Required the input box

--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
         <ul id="input-buttons">
           <li>
             <label for="quantity">Números</label>
-            <input type="number" id="quantity">
+            <input type="number" id="quantity" required>
           </li>
           <li>
             <label for="min-range">De</label>
-            <input type="number" id="min-range">
+            <input type="number" id="min-range" required>
           </li>
           <li>
             <label for="max-range">Até</label>
-            <input type="number" id="max-range">
+            <input type="number" id="max-range" required>
           </li>
         </ul>
 
