--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
 
     </form>
 
-    <aside id="aside-container" class="result-hidden">
+    <aside id="aside-container" class="container-hidden">
       
       <header class="aside-header">
         <h2>Resultado do Sorteio</h2>
-        <p>Números gerados com sucesso!</p>
+        <p>1° Resultado</p>
       </header>
 
       <ul id="results-list">
